# RatioTap

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  HANDOFF.md  LICENSE  PLAN.md  README.md
.github/workflows/: ci.yml  style.yml
bench/: baselines.json
bench/icount/: CMakeLists.txt  icount_main.cpp
cmake/: arm-cortex-m33-mps2.cmake  arm-cortex-m55-mps3.cmake  hexagon-linux-musl.cmake
examples/: CMakeLists.txt  bluetooth_bridge.cpp
include/tap/ratio/: converter.h  design.h  phase_table.h  ratio.h  schedule.h
notebooks/: design_spike.ipynb  ratio_demo.ipynb  ratiotap_py.py
platform/: armv8m_startup.c
platform/mps2_an505/: mps2_an505.ld
platform/mps3_an547/: mps3_an547.ld
scripts/: icount.py
tests/: CMakeLists.txt  bare_metal_main.cpp  test_converter.cpp  test_converter_fixed_point.cpp  test_cross_validation.cpp  test_design.cpp  test_phase_table.cpp  test_schedule.cpp  test_skeleton.cpp
tests/reference/: reference_vectors.h
tools/capi/: CMakeLists.txt  ratio_capi.cpp  ratio_capi.h
tools/qemu_insn_plugin/: insn_count.c
tools/reference/: make_reference_vectors.py
